syntax = "proto3";

package api.palace.common;

import "palace/common/common_enum.proto";
import "palace/common/team.proto";
import "palace/common/system.proto";
import "palace/common/common.proto";

option go_package = "github.com/aide-family/moon/pkg/api/palace/common;common";

message NoticeHookItem {
  uint32 noticeHookId = 1;
  string createdAt = 2;
  string updatedAt = 3;
  string name = 4;
  string remark = 5;
  api.palace.common.GlobalStatus status = 6;
  string url = 7;
  api.palace.common.HTTPMethod method = 8;
  string secret = 9;
  repeated api.palace.common.KeyValueItem headers = 10;
  api.palace.common.HookAPP app = 11;
  api.palace.common.UserBaseItem creator = 12;
  repeated api.palace.common.NoticeGroupItem noticeGroups = 13;
}

message NoticeMemberItem {
  uint32 noticeGroupId = 1;
  uint32 userId = 2;
  api.palace.common.NoticeType noticeType = 3;
  NoticeGroupItem noticeGroup = 4;
  api.palace.common.TeamMemberBaseItem member = 5;
  repeated api.palace.common.TimeEngineItem dutyCycles = 6;
}

message NoticeGroupItem {
  uint32 noticeGroupId = 1;
  string createdAt = 2;
  string updatedAt = 3;
  string name = 4;
  string remark = 5;
  api.palace.common.GlobalStatus status = 6;
  repeated api.palace.common.NoticeMemberItem noticeMembers = 7;
  repeated NoticeHookItem hooks = 8;
  api.palace.common.UserBaseItem creator = 9;
}

message StrategyMetricLevelLabelNotice {
  uint32 labelNoticeId = 1;
  string createdAt = 2;
  string updatedAt = 3;
  uint32 strategyMetricRuleId = 4;
  string labelKey = 5;
  string labelValue = 6;
  repeated api.palace.common.NoticeGroupItem notices = 7;
}